--- a/ngrx-travel/travel/angular.json
+++ b/ngrx-travel/travel/angular.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "$schema": "/node_modules/@angular/cli/lib/config/schema.json",
   "version": 1, 
   "newProjectRoot": "projects",
   "projects": {
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+                "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
             ]
