--- a/ngrx-travel/travel/package.json
+++ b/ngrx-travel/travel/package.json
@@ -19,9 +19,15 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@clr/angular": "^3.1.0",
+    "@clr/core": "^3.1.0",
+    "@clr/icons": "^3.1.0",
+    "@clr/ui": "^3.1.0",
     "@ngrx/effects": "^9.0.0",
     "@ngrx/store": "^9.0.0",
     "@ngrx/store-devtools": "^9.0.0",
+    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
